# eo-data-pipeline

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: ci.yml
eo_data_pipeline/config/: config_schema.py  hydra_config.yaml
eo_data_pipeline/data_access/: access_layer.py
eo_data_pipeline/data_fetcher/: fetcher.py  validator.py
eo_data_pipeline/data_loader/: loader.py
eo_data_pipeline/pipeline/: flow.py
notebooks/: PySTAC_Catalog.ipynb  data_access.ipynb
scripts/: run_pipeline.py
tests/: test_data_fetcher.py  test_data_loader.py  test_data_validator.py
